IE fix for svg visibility

--- a/src/styles/styles.index.less
+++ b/src/styles/styles.index.less
@@ -43,8 +43,6 @@ main, footer {
     max-width: 1280px;
 }
 #container {
-    height: 0;
-    padding-bottom: 62.5%;
     margin-top: 2em;
 }
 svg {
